# gofish

./: .cvsignore  ChangeLog  Configure_GoFish  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acconfig.h  catfish.c  cgi.c  check-files  config.c  config.h.in  configure  configure.in  dotcache.5  gmap2cache.1  gmap2cache.c  gofish-www.conf  gofish.1  gofish.5  gofish.c  gofish.conf  gofish.h  gofish.spec  gopher.el  gopherd.c  gopherd.h  goproxy.c  http.c  init-gofish  log.c  mime.c  mkcache.1  mkcache.c  mkinstalldirs  mmap_cache.c  socket.c  (+1 more)
debian/: changelog  control  rules
debian/maint/: gofish  postinst  postrm
debian/patches/: 00list  01-paths.dpatch
obsolete/: cgi.c
slackware/: doinst.sh  make-slack
